[gd_scene format=3 uid="uid://dq05gsoxhb16t"]

[ext_resource type="Script" uid="uid://c0hcc4ni671nu" path="res://characters/player/player.gd" id="1_oul6g"]
[ext_resource type="Script" uid="uid://n64v8r565gx0" path="res://characters/player/components/camera_spring_arm.gd" id="1_rkbax"]
[ext_resource type="Script" uid="uid://ng7b5tn0vurj" path="res://characters/player/components/camera_follow.gd" id="2_g1dw6"]
[ext_resource type="PackedScene" uid="uid://cw4rwxc3dyovc" path="res://addons/inventory-system-demos/character/character_inventory_system.tscn" id="4_2ieo8"]
[ext_resource type="InventoryDatabase" uid="uid://de5qy8ycey7yn" path="res://addons/inventory-system-demos/database/database.tres" id="4_g6k8r"]
[ext_resource type="Script" uid="uid://ce3jelrqjrcl3" path="res://addons/inventory-system-demos/mp/networked_character_inventory_system.gd" id="6_ebec5"]
[ext_resource type="Script" uid="uid://gngi6ncgkswy" path="res://addons/inventory-system-demos/character/openable.gd" id="7_yllr7"]
[ext_resource type="Script" uid="uid://dlemxn6c687mt" path="res://addons/inventory-system-demos/mp/sync_grid_inventory.gd" id="8_kb6p2"]
[ext_resource type="Script" uid="uid://bldichxbdfybi" path="res://addons/inventory-system-demos/mp/sync_craft_station.gd" id="9_wodsf"]
[ext_resource type="Script" uid="uid://coxx33tl8y1wc" path="res://addons/inventory-system-demos/mp/networked_object_placer.gd" id="10_32hag"]
[ext_resource type="Script" uid="uid://dimv4yn7jk4o4" path="res://addons/inventory-system-demos/mp/sync_hotbar.gd" id="11_tqiix"]
[ext_resource type="Script" uid="uid://chpxhifwptoga" path="res://addons/inventory-system-demos/character/hand_item_holder_3d.gd" id="12_ebec5"]
[ext_resource type="Script" uid="uid://dw4ok8wsnioy1" path="res://characters/player/components/item_thrower.gd" id="13_yllr7"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_oul6g"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("MeshInstance3D:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kqu6x"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_oul6g"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gqopd"]
albedo_color = Color(0.43072253, 0.19710286, 0.4505208, 1)

[sub_resource type="BoxMesh" id="BoxMesh_g1dw6"]
material = SubResource("StandardMaterial3D_gqopd")

[sub_resource type="BoxMesh" id="BoxMesh_yllr7"]
size = Vector3(0.125, 0.125, 0.125)

[sub_resource type="SphereShape3D" id="SphereShape3D_g1dw6"]

[node name="Player" type="CharacterBody3D" unique_id=21488461]
script = ExtResource("1_oul6g")

[node name="HUD" type="Control" parent="." unique_id=1097952654]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CrossHair" type="CenterContainer" parent="HUD" unique_id=758380147]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="HUD/CrossHair" unique_id=827713922]
custom_minimum_size = Vector2(6, 6)
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." unique_id=2040872857]
replication_config = SubResource("SceneReplicationConfig_oul6g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1573151737]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_kqu6x")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=684829808]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_oul6g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D" unique_id=2000119739]
transform = Transform3D(0.6105391, 0, 0, 0, 0.2600448, 0, 0, 0, 0.6388302, 0, 0.5, -0.34065545)
mesh = SubResource("BoxMesh_g1dw6")

[node name="HandItem" type="Node3D" parent="MeshInstance3D" unique_id=254690038]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0.23068433, -0.22458684, -0.81101626)
script = ExtResource("12_ebec5")

[node name="DefaultHandItem" type="MeshInstance3D" parent="MeshInstance3D/HandItem" unique_id=397432587]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.21879014, 0.4395063, -0.05749494)
mesh = SubResource("BoxMesh_yllr7")

[node name="SpringArmPivot" type="Node3D" parent="." unique_id=1943155115]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8683447, 0)
script = ExtResource("1_rkbax")

[node name="SpringArm3D" type="SpringArm3D" parent="SpringArmPivot" unique_id=1634919308]
shape = SubResource("SphereShape3D_g1dw6")
spring_length = 2.02

[node name="CameraPositionTarget" type="Node3D" parent="SpringArmPivot/SpringArm3D" unique_id=1727233228]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.93879414, 0, 0)

[node name="Camera3D" type="Camera3D" parent="SpringArmPivot" unique_id=1636851354 node_paths=PackedStringArray("target_node")]
script = ExtResource("2_g1dw6")
target_node = NodePath("../SpringArm3D/CameraPositionTarget")
camera_x_offset = 1.0

[node name="RayCast3D" type="RayCast3D" parent="SpringArmPivot/Camera3D" unique_id=1926112210]
target_position = Vector3(0, 0, -5)
collision_mask = 16

[node name="CharacterInventorySystem" parent="." unique_id=420464514 node_paths=PackedStringArray("raycast", "camera_3d") instance=ExtResource("4_2ieo8")]
database = ExtResource("4_g6k8r")
script = ExtResource("6_ebec5")
raycast = NodePath("../SpringArmPivot/Camera3D/RayCast3D")
camera_3d = NodePath("../SpringArmPivot/Camera3D")

[node name="Inventory" parent="CharacterInventorySystem" index="0"]
size = Vector2i(8, 8)
database = ExtResource("4_g6k8r")

[node name="Openable" type="Node" parent="CharacterInventorySystem/Inventory" index="0" unique_id=1377190637]
script = ExtResource("7_yllr7")

[node name="SyncInventory" type="Node" parent="CharacterInventorySystem/Inventory" index="1" unique_id=793749100 node_paths=PackedStringArray("inventory")]
script = ExtResource("8_kb6p2")
inventory = NodePath("..")

[node name="EquipmentInventory" parent="CharacterInventorySystem" index="1"]
database = ExtResource("4_g6k8r")

[node name="SyncInventory" type="Node" parent="CharacterInventorySystem/EquipmentInventory" index="0" unique_id=1306714330 node_paths=PackedStringArray("inventory")]
script = ExtResource("8_kb6p2")
inventory = NodePath("..")

[node name="SyncCraftStation" type="Node" parent="CharacterInventorySystem/CraftStation" index="0" unique_id=2045633152 node_paths=PackedStringArray("craft_station")]
script = ExtResource("9_wodsf")
craft_station = NodePath("..")

[node name="Interactor" parent="CharacterInventorySystem" index="3" node_paths=PackedStringArray("raycast", "camera")]
database = ExtResource("4_g6k8r")
node_base_to_interactions = NodePath("../..")
raycast = NodePath("../../SpringArmPivot/Camera3D/RayCast3D")
camera = NodePath("../../SpringArmPivot/Camera3D")

[node name="ObjectPlacer" parent="CharacterInventorySystem/Interactor" index="0"]
database = ExtResource("4_g6k8r")
script = ExtResource("10_32hag")
spawner_path = NodePath("../../../../PlaceableItemSpawner")

[node name="Hotbar" parent="CharacterInventorySystem" index="4"]
selection_index = 0
auto_equip_mode = 2

[node name="SyncHotbar" type="Node" parent="CharacterInventorySystem/Hotbar" index="0" unique_id=3300721 node_paths=PackedStringArray("hotbar")]
unique_name_in_owner = true
script = ExtResource("11_tqiix")
hotbar = NodePath("..")

[node name="ItemThrower" type="Node3D" parent="." unique_id=386433890 node_paths=PackedStringArray("hotbar", "hand", "camera")]
script = ExtResource("13_yllr7")
hotbar = NodePath("../CharacterInventorySystem/Hotbar")
hand = NodePath("../MeshInstance3D/HandItem/DefaultHandItem")
camera = NodePath("../SpringArmPivot/Camera3D")

[editable path="CharacterInventorySystem"]
